--- a/php72/Dockerfile
+++ b/php72/Dockerfile
@@ -9,8 +9,7 @@ ENV APACHE_RUN_GROUP www-data
 ENV APACHE_REQUEST_WORKERS 150
 ENV PATH=/var/www/vendor/bin:$PATH
 
-RUN echo "deb http://ftp.debian.org/debian jessie-backports main" >> /etc/apt/sources.list \
-  && apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
       # for bz2
       bzip2 libbz2-dev \
       # for ftp
@@ -31,8 +30,10 @@ RUN echo "deb http://ftp.debian.org/debian jessie-backports main" >> /etc/apt/so
       jpegoptim \
       optipng \
       pngquant \
-    # We need git >= 2.11 - see https://github.com/cweagans/composer-patches/issues/174.
-    && apt-get -t jessie-backports install -y git \
+      # for git
+      git \
+      # for composer
+      unzip \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
