--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: [7.0, 7.1, 7.2, 7.3]
+        version: ["7.0", "7.1", "7.2", "7.3"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
       - name: Build Image
         run: docker build -t lastcallmedia/php:${{ matrix.version }} ./${{ matrix.version }}
       - name: Test Image
-        uses: brpaz/structure-tests-action@v1
+        uses: ./.github/actions/container-structure-test
         with:
           image: lastcallmedia/php:${{ matrix.version }}
-          configFile: ./${{ matrix.version }}/test.yml
+          config: ./${{ matrix.version }}/test.yml
