--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -34,6 +34,8 @@ jobs:
   check-template:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v1
       - name: Setup dockerize
         uses: zcong1993/setup-dockerize@v1.1.0
         with:
