--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -2,7 +2,7 @@ name: Test
 on: [push, pull_request]
 
 jobs:
-  "Test Image":
+  test-image:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -31,7 +31,7 @@ jobs:
           sleep 3
           curl -I http://localhost:8080
           docker stop $IMG
-  "Check Template":
+  check-template:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
