--- a/8.0-dev/test.yml
+++ b/8.0-dev/test.yml
@@ -57,13 +57,15 @@ commandTests:
       - {key: XDEBUG_ENABLE, value: True }
       - {key: XDEBUG_REMOTE_HOST, value: foo.bar}
       - {key: XDEBUG_IDEKEY, value: foobar}
-      - {key: XDEBUG_REMOTE_ENABLE, value: 1}
-      - {key: XDEBUG_REMOTE_AUTOSTART, value: 1}
+
+      - {key: XDEBUG_START_WITH_REQUEST, value: "yes"}
+
     expectedOutput:
-      - xdebug.remote_autostart => On => On
-      - xdebug.remote_enable => On => On
-      - xdebug.remote_host => foo.bar => foo.bar
       - xdebug.idekey => foobar => foobar
+
+      - xdebug.start_with_request => yes => yes
+      - xdebug.client_host => foo.bar => foo.bar
+
   - name: "NodeJS Should be installed and in the correct version"
     command: "node"
     args: ["--version"]
