--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,10 @@ jobs:
           - "7.3-dev"
           - "7.4"
           - "7.4-dev"
+          - "8.0"
+          - "8.0-dev"
+          - "8.1"
+          - "8.1-dev"
     steps:
       - name: Checkout Code
         uses: actions/checkout@v1
