Fix failing regenerate tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,4 +51,6 @@ jobs:
       - name: Run regenerate
         run: ./regenerate.sh
       - name: Check diff
-        run: '{ echo "`git diff`" }  || [[ -z $(git status --porcelain) ]] || { echo "Changes detected to template that are not reflected in the repository."; exit 1; }'
+        run: '[[ -z $(git status --porcelain) ]] || { echo "Changes detected to template that are not reflected in the repository."; exit 1; }'
+      - name: Get diff
+        run: echo "`git diff`"
