Fix failing regenerate tests

--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -6,7 +6,7 @@ ENV APACHE_DOCROOT /var/www/html
 ENV PATH=/var/www/vendor/bin:$PATH
 ENV COMPOSER_MEMORY_LIMIT "-1"
 
-{{ if (eq (atoi .Env.PHP_MAJOR_VERSION) 7.0) }} && RUN sed -i -e 's/deb.debian.org/archive.debian.org/g' \
+{{ if (eq (.Env.PHP_MAJOR_VERSION) 7.0) }} && RUN sed -i -e 's/deb.debian.org/archive.debian.org/g' \
                                                             -e 's|security.debian.org|archive.debian.org/|g' \
                                                             -e '/stretch-updates/d' /etc/apt/sources.list {{ end }}\
 
