Fix failing regenerate tests

--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -6,7 +6,8 @@ ENV APACHE_DOCROOT /var/www/html
 ENV PATH=/var/www/vendor/bin:$PATH
 ENV COMPOSER_MEMORY_LIMIT "-1"
 
-{{- if (eq (.Env.PHP_VERSION) "7.0") -}}# Update stretch repositories
+{{- if (eq (.Env.PHP_VERSION) "7.0") }}
+# Update stretch repositories
 RUN sed -i -e 's/deb.debian.org/archive.debian.org/g' \
            -e 's|security.debian.org|archive.debian.org/|g' \
            -e '/stretch-updates/d' /etc/apt/sources.list{{- end }}
