upgraded terminus to version 4 version 5

--- a/8.4-dev/Dockerfile
+++ b/8.4-dev/Dockerfile
@@ -122,7 +122,7 @@ RUN set -eux; \
       > /etc/apt/sources.list.d/yarn.list; \
     \
     apt-get update; \
-    apt-get install -y --no-install-recommends nodejs yarn; \
+    apt-get install -y --no-install-recommends nodejs yarn;
 
 # Blackfire Probe. Note: We do not install Blackfire CLI. You will
 # need that in order to trigger Blackfire tests. The probe just instruments
